// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with constant default value 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={25}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      left
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      right
    </Text>
  </View>
</View>
`;

exports[`with default value from a question with default value with data \`{ value: 61 }\` 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={61}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      left
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      right
    </Text>
  </View>
</View>
`;

exports[`with default value from a question with default value with data \`null\` 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={100}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      left
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      right
    </Text>
  </View>
</View>
`;

exports[`with default value from a question without default value with data \`{ value: 31 }\` 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={31}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      left
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      right
    </Text>
  </View>
</View>
`;

exports[`with default value from a question without default value with data \`null\` 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={50}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      left
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      right
    </Text>
  </View>
</View>
`;

exports[`without default value 1`] = `
<View
  style={
    Object {
      "paddingVertical": 30,
    }
  }
>
  <RNCSlider
    accessibilityLabel="slider input"
    disabled={false}
    enabled={true}
    inverted={false}
    maximumTrackTintColor="#2F2424"
    maximumValue={100}
    minimumTrackTintColor="#2F2424"
    minimumValue={0}
    onChange={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={null}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={1}
    style={
      Object {
        "height": 40,
      }
    }
    thumbImage={
      Object {
        "__packager_asset": true,
        "height": 1,
        "scale": 1,
        "uri": "file://assets/full/path/to/directory/name.type",
        "width": 1,
      }
    }
    value={50}
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      leftmost
    </Text>
    <Text
      style={
        Object {
          "maxWidth": "40%",
        }
      }
    >
      rightmost
    </Text>
  </View>
</View>
`;
